@@ -1,8 +1,7 @@
-package com.velikkom.demo.service.business;
+package com.velikkom.demo.service.impl;
 
 import com.velikkom.demo.entity.concretes.business.Expense;
 import com.velikkom.demo.entity.concretes.user.User;
-import com.velikkom.demo.exception.ResourceNotFoundException;
 import com.velikkom.demo.mapper.ExpenseMapper;
 import com.velikkom.demo.payload.request.AdminExpenseFilterRequest;
 import com.velikkom.demo.payload.request.DateRangeRequest;
@@ -12,12 +11,18 @@ import com.velikkom.demo.payload.response.ExpenseResponse;
 import com.velikkom.demo.repository.ExpenseRepository;
 import com.velikkom.demo.repository.UserRepository;
 import com.velikkom.demo.service.ExpenseService;
+import com.velikkom.demo.util.ExpenseSpecification;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.access.AccessDeniedException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,101 +32,95 @@ public class ExpenseServiceImpl implements ExpenseService {
     private final UserRepository userRepository;
     private final ExpenseMapper expenseMapper;
 
-
     @Override
-    public ExpenseResponse saveExpense(ExpenseRequest request, String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Kullanıcı bulunamadı: " + userEmail));
+    @Transactional
+    public ExpenseResponse saveExpense(ExpenseRequest request, String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Kullanıcı bulunamadı"));
 
         Expense expense = expenseMapper.toEntity(request, user);
-        expenseRepository.save(expense);
-
-        return expenseMapper.toResponse(expense);
+        Expense savedExpense = expenseRepository.save(expense);
+        return expenseMapper.toResponse(savedExpense);
     }
 
-
     @Override
-    public void deleteExpense(Long expenseId, String userEmail) {
-        Expense expense = expenseRepository.findById(expenseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Masraf bulunamadı: " + expenseId));
+    @Transactional
+    public void deleteExpense(Long id, String email) {
+        Expense expense = expenseRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Masraf bulunamadı"));
 
-        // Güvenlik kontrolü: sadece sahibi silebilir
-        if (!expense.getUser().getEmail().equals(userEmail)) {
-            throw new AccessDeniedException("Bu masrafı silme yetkiniz yok.");
+        if (!expense.getUser().getEmail().equals(email)) {
+            throw new RuntimeException("Bu masrafı silmeye yetkiniz yok");
         }
 
         expenseRepository.delete(expense);
     }
 
-
     @Override
-    public ExpenseResponse updateExpense(Long id, ExpenseRequest request, String userEmail) {
+    @Transactional
+    public ExpenseResponse updateExpense(Long id, ExpenseRequest request, String email) {
         Expense expense = expenseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Masraf bulunamadı: " + id));
+                .orElseThrow(() -> new RuntimeException("Masraf bulunamadı"));
 
-        // Sadece sahibi güncelleyebilir
-        if (!expense.getUser().getEmail().equals(userEmail)) {
-            throw new AccessDeniedException("Bu masrafı güncelleme yetkiniz yok.");
+        if (!expense.getUser().getEmail().equals(email)) {
+            throw new RuntimeException("Bu masrafı güncellemeye yetkiniz yok");
         }
 
-        // Güncellenebilir alanlar
-        expense.setExpenseDate(request.getExpenseDate());
-        expense.setType(request.getType());
-        expense.setAmount(request.getAmount());
+        Expense updatedExpense = expenseMapper.toEntity(request, expense.getUser());
+        updatedExpense.setId(expense.getId());
 
-        expenseRepository.save(expense);
-        return expenseMapper.toResponse(expense);
+        Expense savedExpense = expenseRepository.save(updatedExpense);
+        return expenseMapper.toResponse(savedExpense);
     }
 
     @Override
     public List<ExpenseResponse> filterMyExpenses(ExpenseFilterRequest filter, String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Kullanıcı bulunamadı: " + userEmail));
-
-        List<Expense> filteredExpenses = expenseRepository.filterExpenses(filter, user.getId());
-
-        return filteredExpenses.stream()
-                .map(expenseMapper::toResponse)
-                .toList();
+        List<Expense> expenses = expenseRepository.findAll(
+                ExpenseSpecification.forUser(userEmail, filter)
+        );
+        return expenses.stream().map(expenseMapper::toResponse).collect(Collectors.toList());
     }
 
     @Override
     public List<ExpenseResponse> filterExpensesForAdmin(AdminExpenseFilterRequest filter) {
-        List<Expense> expenses = expenseRepository.filterExpensesForAdmin(filter);
-        return expenses.stream()
-                .map(expenseMapper::toResponse)
-                .toList();
+        List<Expense> expenses = expenseRepository.findAll(
+                ExpenseSpecification.forAdmin(filter)
+        );
+        return expenses.stream().map(expenseMapper::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public BigDecimal getTotalExpenseByDateRange(DateRangeRequest request, String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Kullanıcı bulunamadı"));
+    public BigDecimal getTotalExpenseByDateRange(DateRangeRequest request, String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Kullanıcı bulunamadı"));
 
-        BigDecimal total = expenseRepository.getTotalAmountByUserIdAndDateRange(
+        return expenseRepository.getTotalAmountByUserIdAndDateRange(
                 user.getId(),
                 request.getStartDate(),
                 request.getEndDate()
         );
-
-        return total != null ? total : BigDecimal.ZERO;
     }
 
     @Override
-    public BigDecimal getMyTotalExpenseByDate(DateRangeRequest request, String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Kullanıcı bulunamadı"));
-
-        BigDecimal total = expenseRepository.getTotalAmountByUserIdAndDateRange(
-                user.getId(),
-                request.getStartDate(),
-                request.getEndDate()
-        );
-
-        return total != null ? total : BigDecimal.ZERO;
+    public BigDecimal getMyTotalExpenseByDate(DateRangeRequest request, String email) {
+        return getTotalExpenseByDateRange(request, email);
     }
 
+    @Override
+    public Page<ExpenseResponse> filterMyExpensesPaged(ExpenseFilterRequest filter, String email, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("expenseDate").descending());
+        return expenseRepository.findAll(
+                ExpenseSpecification.forUser(email, filter),
+                pageable
+        ).map(expenseMapper::toResponse);
+    }
 
-
-
+    @Override
+    public Page<ExpenseResponse> filterExpensesForAdminPaged(AdminExpenseFilterRequest filter, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("expenseDate").descending());
+        return expenseRepository.findAll(
+                ExpenseSpecification.forAdmin(filter),
+                pageable
+        ).map(expenseMapper::toResponse);
+    }
 }
